fix h3 alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -32,9 +32,6 @@ h1{
     font-size: 48px;
     padding: 24px;
 }
-h3{
-    text-align: center;
-}
 nav{
     display: flex;
 }
@@ -123,6 +120,9 @@ footer{
     line-height: 1.5em;
     color: var(--bg-color2);
 }
+.home-flex-item h3{
+    text-align: center;
+}
 #tutorial-header{
     justify-content: center;
 }
@@ -175,7 +175,7 @@ code{
     h1{
         font-size: 42px;
     }
-    h3{
+    .home-flex-item h3{
         text-align: left;
     }
     .home-flex-item{
